--- a/src/client/src/app/pages/profile/profile.scss
+++ b/src/client/src/app/pages/profile/profile.scss
@@ -134,6 +134,9 @@
   .profileBody .sectionCard{
     padding: 20px 10px !important;
   }
+  .blogpost{
+    overflow: hidden !important;
+  }
   .blogposts{
     margin: 15px 0px;  
     width: 80% !important;
